WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194432
[JSC] SourceProviderCacheItem should be small
https://bugs.webkit.org/show_bug.cgi?id=194432
Summary
[JSC] SourceProviderCacheItem should be small
Yusuke Suzuki
Reported
2019-02-08 02:49:34 PST
[JSC] SourceProviderCacheItem should be small
Attachments
Patch
(8.38 KB, patch)
2019-02-08 02:52 PST
,
Yusuke Suzuki
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2019-02-08 02:52:04 PST
Created
attachment 361499
[details]
Patch
EWS Watchlist
Comment 2
2019-02-08 02:54:34 PST
Attachment 361499
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/parser/ParserTokens.h:194: The parameter name "<" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yusuke Suzuki
Comment 3
2019-02-08 11:18:19 PST
Committed
r241201
: <
https://trac.webkit.org/changeset/241201
>
Radar WebKit Bug Importer
Comment 4
2019-02-08 11:19:28 PST
<
rdar://problem/47923343
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug