Source/JavaScriptCore/parser/SourceProviderCacheItem.h
@@ -34,14 +34,12 @@
 namespace JSC {
 
 struct SourceProviderCacheItemCreationParameters {
-    unsigned functionNameStart;
     unsigned lastTokenLine;
     unsigned lastTokenStartOffset;
     unsigned lastTokenEndOffset;
     unsigned lastTokenLineStartOffset;
     unsigned endFunctionOffset;
     unsigned parameterCount;
-    unsigned functionLength;
     bool needsFullActivation;
     bool usesEval;
     bool strictMode;
@@ -68,7 +66,7 @@ public:
     JSToken endFunctionToken() const 
     {
         JSToken token;
-        token.m_type = isBodyArrowExpression ? tokenType : CLOSEBRACE;
+        token.m_type = isBodyArrowExpression ? static_cast<JSTokenType>(tokenType) : CLOSEBRACE;
         token.m_data.offset = lastTokenStartOffset;
         token.m_location.startOffset = lastTokenStartOffset;
         token.m_location.endOffset = lastTokenEndOffset;
@@ -79,24 +77,22 @@ public:
         return token;
     }
 
-    unsigned functionNameStart : 31;
     bool needsFullActivation : 1;
     unsigned endFunctionOffset : 31;
     bool usesEval : 1;
     unsigned lastTokenLine : 31;
     bool strictMode : 1;
     unsigned lastTokenStartOffset : 31;
-    unsigned lastTokenEndOffset: 31;
-    unsigned constructorKind : 2; // ConstructorKind
-    unsigned parameterCount : 31;
     unsigned expectedSuperBinding : 1; // SuperBinding
+    unsigned lastTokenEndOffset: 31;
     bool needsSuperBinding: 1;
-    unsigned functionLength;
-    unsigned lastTokenLineStartOffset;
+    unsigned parameterCount : 31;
+    unsigned lastTokenLineStartOffset : 31;
+    bool isBodyArrowExpression : 1;
     unsigned usedVariablesCount;
-    InnerArrowFunctionCodeFeatures innerArrowFunctionFeatures;
-    bool isBodyArrowExpression;
-    JSTokenType tokenType;
+    unsigned tokenType : 24; // JSTokenType
+    unsigned innerArrowFunctionFeatures : 6; // InnerArrowFunctionCodeFeatures
+    unsigned constructorKind : 2; // ConstructorKind
 
     UniquedStringImpl** usedVariables() const { return const_cast<UniquedStringImpl**>(m_variables); }
 
@@ -121,25 +117,27 @@ inline std::unique_ptr<SourceProviderCacheItem> SourceProviderCacheItem::create(
 }
 
 inline SourceProviderCacheItem::SourceProviderCacheItem(const SourceProviderCacheItemCreationParameters& parameters)
-    : functionNameStart(parameters.functionNameStart)
-    , needsFullActivation(parameters.needsFullActivation)
+    : needsFullActivation(parameters.needsFullActivation)
     , endFunctionOffset(parameters.endFunctionOffset)
     , usesEval(parameters.usesEval)
     , lastTokenLine(parameters.lastTokenLine)
     , strictMode(parameters.strictMode)
     , lastTokenStartOffset(parameters.lastTokenStartOffset)
-    , lastTokenEndOffset(parameters.lastTokenEndOffset)
-    , constructorKind(static_cast<unsigned>(parameters.constructorKind))
-    , parameterCount(parameters.parameterCount)
     , expectedSuperBinding(static_cast<unsigned>(parameters.expectedSuperBinding))
+    , lastTokenEndOffset(parameters.lastTokenEndOffset)
     , needsSuperBinding(parameters.needsSuperBinding)
-    , functionLength(parameters.functionLength)
+    , parameterCount(parameters.parameterCount)
     , lastTokenLineStartOffset(parameters.lastTokenLineStartOffset)
-    , usedVariablesCount(parameters.usedVariables.size())
-    , innerArrowFunctionFeatures(parameters.innerArrowFunctionFeatures)
     , isBodyArrowExpression(parameters.isBodyArrowExpression)
-    , tokenType(parameters.tokenType)
+    , usedVariablesCount(parameters.usedVariables.size())
+    , tokenType(static_cast<unsigned>(parameters.tokenType))
+    , innerArrowFunctionFeatures(static_cast<unsigned>(parameters.innerArrowFunctionFeatures))
+    , constructorKind(static_cast<unsigned>(parameters.constructorKind))
 {
+    ASSERT(tokenType == static_cast<unsigned>(parameters.tokenType));
+    ASSERT(innerArrowFunctionFeatures == static_cast<unsigned>(parameters.innerArrowFunctionFeatures));
+    ASSERT(constructorKind == static_cast<unsigned>(parameters.constructorKind));
+    ASSERT(expectedSuperBinding == static_cast<unsigned>(parameters.expectedSuperBinding));
     for (unsigned i = 0; i < usedVariablesCount; ++i) {
         m_variables[i] = parameters.usedVariables[i];
         m_variables[i]->ref();
